--- a/pom.xml
+++ b/pom.xml
@@ -42,6 +42,11 @@
 		    <version>1.8.3</version>
 		</dependency>
 				
+				<dependency>
+		    <groupId>org.apache.tomcat.embed</groupId>
+		    <artifactId>tomcat-embed-jasper</artifactId>
+		    <scope>provided</scope>
+		</dependency>
 	</dependencies>
 
 	<build>
